@@ -5855,7 +5855,192 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
-name|testResolveWithDependencyArtifactsConf1
+name|testResolveDefaultWithArtifactsAndConfMapping
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// mod2.2 depends on mod1.3 and specify its artifacts and a conf mapping
+name|ResolveReport
+name|report
+init|=
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org2/mod2.2/ivys/ivy-0.5.1.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"myconf1"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|report
+operator|.
+name|getModuleDescriptor
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|ModuleRevisionId
+name|mrid
+init|=
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org2"
+argument_list|,
+literal|"mod2.2"
+argument_list|,
+literal|"0.5.1"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|mrid
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_cacheManager
+operator|.
+name|getResolvedIvyFileInCache
+argument_list|(
+name|mrid
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_cacheManager
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.3"
+argument_list|,
+literal|"3.0"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.3"
+argument_list|,
+literal|"3.0"
+argument_list|,
+literal|"mod1.3-A"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.3"
+argument_list|,
+literal|"3.0"
+argument_list|,
+literal|"mod1.3-B"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|!
+name|getArchiveFileInCache
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.3"
+argument_list|,
+literal|"3.0"
+argument_list|,
+literal|"mod1.3"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testResolveWithIncludeArtifactsConf1
 parameter_list|()
 throws|throws
 name|Exception
@@ -6033,7 +6218,7 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
-name|testResolveWithDependencyArtifactsConf2
+name|testResolveWithIncludeArtifactsConf2
 parameter_list|()
 throws|throws
 name|Exception
@@ -6210,7 +6395,7 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
-name|testResolveWithDependencyArtifactsWithoutConf
+name|testResolveWithIncludeArtifactsWithoutConf
 parameter_list|()
 throws|throws
 name|Exception
